--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
     "ollama (>=0.4.7,<0.5.0)",
-    "pypdf2 (>=3.0.1,<4.0.0)"
+    "pypdf2 (>=3.0.1,<4.0.0)",
+    "flask-ml (>=0.2.5,<0.3.0)"
 ]
 
 
